# drc-2023

./: .gitignore  CMakeLists.txt  README.md  augment.py  config.csv  drive_client.py  index.html  label.py  mock-server.py  stream.sh  viewer.html
arrow/: augment.py  combine.py  label.py  record.py  train.ipynb  zac_train.py
calibs/: calib_microsoft__lifecam_hd_3000__045e_0779__1280 (1).json  calib_microsoft__lifecam_hd_3000__045e_0779__640 (1).json
src/: arrow.cpp  arrow.hpp  camera.cpp  camera.hpp  car_state.cpp  car_state.hpp  comm.cpp  comm.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  finish_line.cpp  finish_line.hpp  main.cpp  obstable.cpp  obstacle.cpp  obstacle.hpp  pathing.cpp  pathing.hpp  replay.cpp  streamer.cpp  streamer.hpp  util.h  util.hpp  vision.cpp  vision.hpp
src/controllers/: drive-mock.cpp  drive-serial.cpp  drive.hpp  steer-jetson.cpp  steer-mock.cpp  steer-pi.cpp  steer.hpp
src/tests/: test_vision.cpp
